Completed Login Signup Module

--- a/EinNell/loginsignup/templates/loginsignup/index.html
+++ b/EinNell/loginsignup/templates/loginsignup/index.html
@@ -19,7 +19,7 @@
               <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
                 <li><a href="{% url 'loginsignup:index' %}">Home</a></li>
                 <li><a href="https://www.einnel.com">About Us</a></li>
-                <li><a href="#">Products</a>
+                <li><a href="">Products</a>
                   <ul>
                     <li><a href="https://www.einnel.com/einneltask/">EinNel Task</a></li>
                     <li><a href="https://www.einnel.com/einnelmdo/">EinNel MDO</a>
