--- a/EinNell/loginsignup/templates/loginsignup/signup.html
+++ b/EinNell/loginsignup/templates/loginsignup/signup.html
@@ -19,7 +19,7 @@
               <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
                 <li><a href="{% url 'loginsignup:index' %}">Home</a></li>
                 <li><a href="https://www.einnel.com">About Us</a></li>
-                <li><a href="#">Products</a>
+                <li><a href="">Products</a>
                   <ul>
                     <li><a href="https://www.einnel.com/einneltask/">EinNel Task</a></li>
                     <li><a href="https://www.einnel.com/einnelmdo/">EinNel MDO</a>
@@ -69,7 +69,7 @@
 
     </form>
 
-    <p class="text--center">Not a member? <a href="{% url 'loginsignup:signup' %}">Sign up now</a> <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use></svg></p>
+    <p class="text--center">Already a member? <a href="{% url 'loginsignup:login' %}">Log In now</a> <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use></svg></p>
 
   </div>
 
