--- a/EinNell/loginsignup/templates/loginsignup/dashboard_auth.html
+++ b/EinNell/loginsignup/templates/loginsignup/dashboard_auth.html
@@ -19,7 +19,7 @@
               <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
                 <li><a href="">View Profile</a></li>
                 <li><a href="">Contact Employees</a></li>
-                <li><a href="">Create Tasks</a></li>
+                <li><a href={% url 'loginsignup:tasks'%}>Create Tasks</a></li>
                 <li><a href="">View Employees</a></li>
                 <li><a href="">Review Employees</a></li>
                 <li><a href="">Promote</a></li>
