Added promoting employees module

--- a/EinNell/loginsignup/templates/loginsignup/index.html
+++ b/EinNell/loginsignup/templates/loginsignup/index.html
@@ -41,7 +41,7 @@
 <body class="align">
 
 <div class="flexme">
-    <h1 class="heading">EinNel Technologies</h1>
+    <h1 class="heading">EinNel Task</h1>
 </div>
 <div>
     <a href={% url 'loginsignup:login' %}><button class="design" type="button">Login</button></a>
