Finished Contact Module

--- a/EinNell/loginsignup/templates/loginsignup/dashboard_emp.html
+++ b/EinNell/loginsignup/templates/loginsignup/dashboard_emp.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'loginsignup/login.css' %}">
     <link rel="stylesheet" href="{% static 'loginsignup/index.css' %}">
+    <link rel="stylesheet" href="{% static 'loginsignup/tasks.css' %}">
   <title>EinNel</title>
 
 </head>
@@ -17,11 +18,12 @@
             </div>
             <nav class="st-navbar-desktop-menu" role="navigation">
               <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
-                <li><a href="{% url 'loginsignup:update' %}">View Profile</a></li>
-                <li><a href="">Contact Senior</a></li>
-                <li><a href={% url 'loginsignup:task' %}>Pending Tasks</a></li>
-                <li><a href={% url 'loginsignup:logout' %}>Logout</a></li>
-                <li><a href=""></a></li>
+            <li><a href={% url 'loginsignup:dashboard' %}>Dashboard</a></li>
+            <li><a href="{% url 'loginsignup:update' %}">View Profile</a></li>
+            <li><a href="{% url 'loginsignup:task' %}">Pending Tasks</a></li>
+            <li><a href={% url 'loginsignup:contact' %}>Contact Senior</a></li>
+            <li><a href={% url 'loginsignup:logout' %}>Logout</a></li>
+            <li><a href=""></a></li>
               </ul>
             </nav>
           </div>
@@ -31,6 +33,11 @@
 
 <body class="align">
 
+<h1>Welcome {{emp.empUser.username}}</h1>
+<h2 class="temp">You have {{len}} tasks pending</h2>
+<h2>Authority you are under</h2>
+<h3 class="temp">Name: {{emp.senior.authUser.username}}</h3>
+<h3 class="elf">Email: {{emp.senior.authUser.email}}</h3>
 
 
 
