--- a/EinNell/loginsignup/templates/loginsignup/viewalltasks.html
+++ b/EinNell/loginsignup/templates/loginsignup/viewalltasks.html
@@ -18,12 +18,11 @@
             </div>
             <nav class="st-navbar-desktop-menu" role="navigation">
               <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
-                <li><a href="">View Profile</a></li>
-                <li><a href="">Contact Employees</a></li>
+                <li><a href={% url 'loginsignup:dashboard'%}>Dashboard</a></li>
+                <li><a href={% url 'loginsignup:contact'%}>Contact Employees</a></li>
                 <li><a href={% url 'loginsignup:task'%}>Create Tasks</a></li>
-                <li><a href="">View Employees</a></li>
-                <li><a href="">Review Employees</a></li>
-                <li><a href="">Promote</a></li>
+                <li><a href={% url 'loginsignup:review'%}>Review Employees</a></li>
+                <li><a href={% url 'loginsignup:promote' %}>Promote</a></li>
                 <li><a href={% url 'loginsignup:logout' %}>Logout</a></li>
                 <li><a href=""></a></li>
               </ul>
