--- a/EinNell/loginsignup/templates/loginsignup/dashboard_auth.html
+++ b/EinNell/loginsignup/templates/loginsignup/dashboard_auth.html
@@ -21,6 +21,8 @@
                 <li><a href={% url 'loginsignup:dashboard'%}>Dashboard</a></li>
                 <li><a href={% url 'loginsignup:contact'%}>Contact Employees</a></li>
                 <li><a href={% url 'loginsignup:task'%}>Create Tasks</a></li>
+                <li><a href={% url 'loginsignup:alltasks' %}>All Tasks</a></li>
+                <li><a href={% url 'loginsignup:rate' %}>Rate Tasks</a></li>
                 <li><a href={% url 'loginsignup:review'%}>Review Employees</a></li>
                 <li><a href={% url 'loginsignup:promote' %}>Promote</a></li>
                 <li><a href={% url 'loginsignup:logout' %}>Logout</a></li>
