--- a/EinNell/loginsignup/templates/loginsignup/dashboard_emp.html
+++ b/EinNell/loginsignup/templates/loginsignup/dashboard_emp.html
@@ -37,7 +37,7 @@
 <h2 class="temp">You have {{len}} tasks pending</h2>
 <h2>Authority you are under</h2>
 <h3 class="temp">Name: {{emp.senior.authUser.username}}</h3>
-<h3 class="elf">Email: {{emp.senior.authUser.email}}</h3>
+<a href={%url 'loginsignup:contact'%}><h3 class="elf">Email: {{emp.senior.authUser.email}}</h3></a>
 
 
 
