--- a/EinNell/loginsignup/templates/loginsignup/sendmailauth.html
+++ b/EinNell/loginsignup/templates/loginsignup/sendmailauth.html
@@ -21,6 +21,8 @@
                 <li><a href={% url 'loginsignup:dashboard'%}>Dashboard</a></li>
                 <li><a href={% url 'loginsignup:contact'%}>Contact Employees</a></li>
                 <li><a href={% url 'loginsignup:task'%}>Create Tasks</a></li>
+                <li><a href={% url 'loginsignup:alltasks' %}>All Tasks</a></li>
+                <li><a href={% url 'loginsignup:rate' %}>Rate Tasks</a></li>
                 <li><a href={% url 'loginsignup:review'%}>Review Employees</a></li>
                 <li><a href={% url 'loginsignup:promote' %}>Promote</a></li>
                 <li><a href={% url 'loginsignup:logout' %}>Logout</a></li>
@@ -35,7 +37,7 @@
 <body class="align">
 
 <div>
-    <h1>Select Mail To Senior</h1>
+    <h1>Send Mail To Employee</h1>
 </div>
 
 <div class="grid">
@@ -52,8 +54,8 @@
 
         <div class="form__field">
             <label for="login__username"><ssvg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#user"></use></svg><span class="hidden">Firstname</span></label>
-        <input id="login__username" list = 'emailauth'  type="text" name="id" class="form__input" placeholder="Employee Name" required>
-          <datalist id = emailauth>
+        <input id="login__username" list = 'emailauth5'  type="text" name="id" class="form__input" placeholder="Employee Name" required>
+          <datalist id = emailauth5>
               {% for i in emp %}
                 <option value="{{ i.empUser.username }}"></option>
               {% endfor %}
