--- a/EinNell/loginsignup/templates/loginsignup/askhr.html
+++ b/EinNell/loginsignup/templates/loginsignup/askhr.html
@@ -33,16 +33,9 @@
 
 <body class="align">
 
-<h1>Welcome {{emp.empUser.username}}</h1>
-{% if not emp.age %} 
-  <a href={% url 'loginsignup:update' %}><h2>Please complete your profile</h2></a>
-{% endif %}
-<h2 class="temp">You have {{len}} tasks pending</h2>
-<h2>Authority you are under</h2>
-<h3 class="temp">Name: {{emp.senior.authUser.username}}</h3>
-<a href={%url 'loginsignup:contact'%}><h3 class="elf">Email: {{emp.senior.authUser.email}}</h3></a>
-
-
+<div>
+<h2 class="yolo">Ask the HR team to modify details</h2>
+</div>
 
 </body>
 
