--- a/EinNell/loginsignup/templates/loginsignup/updateEmployee.html
+++ b/EinNell/loginsignup/templates/loginsignup/updateEmployee.html
@@ -174,7 +174,7 @@
     <label for="yearsAtCur">Years In Current Role</label>
     <input required type="text" id="yearsAtCur" name="yearsAtCur" placeholder="Years in Current Role..">
 
-    <label for="lastprom">Years In Since Last Promotion</label>
+    <label for="lastprom">Years Since Last Promotion</label>
     <input required type="text" id="lastprom" name="lastprom" placeholder="Years since Last Promotion..">
 
     <label for="curManager">Years with Current Manager</label>
