--- a/EinNell/loginsignup/templates/loginsignup/signup.html
+++ b/EinNell/loginsignup/templates/loginsignup/signup.html
@@ -64,7 +64,7 @@
       </div>
 
       <div class="form__field">
-        <input type="submit" value="Sign In">
+        <input type="submit" value="Sign Up">
       </div>
 
     </form>
