Added chat feature between employees and their senior

--- a/EinNell/loginsignup/templates/loginsignup/askhr.html
+++ b/EinNell/loginsignup/templates/loginsignup/askhr.html
@@ -19,9 +19,10 @@
             <nav class="st-navbar-desktop-menu" role="navigation">
               <ul id="st-navbar-desktop-menu-nav" class="sf-menu">
             <li><a href={% url 'loginsignup:dashboard' %}>Dashboard</a></li>
-            <li><a href="{% url 'loginsignup:update' %}">View Profile</a></li>
+            <li><a href="{% url 'loginsignup:update' %}">Update Profile</a></li>
             <li><a href="{% url 'loginsignup:task' %}">Pending Tasks</a></li>
             <li><a href={% url 'loginsignup:contact' %}>Contact Senior</a></li>
+            <li><a href={% url 'loginsignup:chat' %}>Chat</a></li>
             <li><a href={% url 'loginsignup:logout' %}>Logout</a></li>
             <li><a href=""></a></li>
               </ul>
