--- a/EinNell/loginsignup/static/loginsignup/update.css
+++ b/EinNell/loginsignup/static/loginsignup/update.css
@@ -30,3 +30,19 @@ input[type=text], select, textarea {
     background-color: #f2f2f2;
     padding: 20px;
   }
+
+  .design{
+    background-color:#EA4C88;
+    border-radius: 10px;
+    padding : 10px 40px;
+    color:white;
+    font-weight:300;
+    font-size: 20px;
+    width:200px;
+}
+.danger{
+  color:red;  
+}
+.centreme{
+  text-align: center;
+}
