--- a/EinNell/loginsignup/templates/loginsignup/chatauth.html
+++ b/EinNell/loginsignup/templates/loginsignup/chatauth.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{% static 'loginsignup/login.css' %}">
     <link rel="stylesheet" href="{% static 'loginsignup/index.css' %}">
     <link rel="stylesheet" href="{% static 'loginsignup/tasks.css' %}">
+    <link rel="stylesheet" href="{% static 'loginsignup/message.css' %}">
   <title>EinNel</title>
 
 </head>
@@ -34,18 +35,26 @@
         </div>
       </div>
 
-<body class="align">
-
-<h1>Welcome {{auth.authUser.username}}</h1>
-<h2 class = "elf">Employees Under You</h2>
-<ul>
-  {% for i in emp%}
-    <li class="tasks">{{i.empUser.username}}</li>
-  {% endfor %}
-</ul>
-
-
-
-</body>
+<div class="message">
+{% for messages in chat %}
+    {% if messages.writer.username == usr%}
+      <div>
+        <p class="textme">{{messages.content}}</p>
+      </div>
+    {% else %}
+      <div>
+        <p class="textother greyme">{{messages.writer.username}}</p>
+        <p class="textother">:  {{messages.content}}</p>
+      </div>
+    {% endif %}
+{% endfor %}
+</div>
+<form method="POST">
+{% csrf_token %}
+    <div class="send">
+        <input required class="fullme" type="text" name="content" placeholder="Enter the message..."></input>
+        <input class="hilo" type="submit" value="submit"></input>
+    </div>
+</form>
 
 </html>
