--- a/EinNell/loginsignup/templates/loginsignup/chatemp.html
+++ b/EinNell/loginsignup/templates/loginsignup/chatemp.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{% static 'loginsignup/login.css' %}">
     <link rel="stylesheet" href="{% static 'loginsignup/index.css' %}">
     <link rel="stylesheet" href="{% static 'loginsignup/tasks.css' %}">
+    <link rel="stylesheet" href="{% static 'loginsignup/message.css' %}">
   <title>EinNel</title>
 
 </head>
@@ -31,20 +32,26 @@
         </div>
       </div>
 
-
-<body class="align">
-
-<h1>Welcome {{emp.empUser.username}}</h1>
-{% if not emp.age %} 
-  <a href={% url 'loginsignup:update' %}><h2>Please complete your profile</h2></a>
-{% endif %}
-<h2 class="temp">You have {{len}} tasks pending</h2>
-<h2>Authority you are under</h2>
-<h3 class="temp">Name: {{emp.senior.authUser.username}}</h3>
-<a href={%url 'loginsignup:contact'%}><h3 class="elf">Email: {{emp.senior.authUser.email}}</h3></a>
-
-
-
-</body>
+<div class="message">
+{% for messages in chat %}
+    {% if messages.writer.username == usr%}
+      <div>
+        <p class="textme">{{messages.content}}</p>
+      </div>
+    {% else %}
+      <div>
+        <p class="textother greyme">{{messages.writer.username}}</p>
+        <p class="textother">:  {{messages.content}}</p>
+      </div>
+    {% endif %}
+{% endfor %}
+</div>
+<form method="POST">
+{% csrf_token %}
+    <div class="send">
+        <input required class="fullme" type="text" name="content" placeholder="Enter the message..."></input>
+        <input class="hilo" type="submit" value="submit"></input>
+    </div>
+</form>
 
 </html>
