--- a/EinNell/loginsignup/templates/loginsignup/rate.html
+++ b/EinNell/loginsignup/templates/loginsignup/rate.html
@@ -25,6 +25,7 @@
                 <li><a href={% url 'loginsignup:rate' %}>Rate Tasks</a></li>
                 <li><a href={% url 'loginsignup:review'%}>Review Employees</a></li>
                 <li><a href={% url 'loginsignup:promote' %}>Promote</a></li>
+                <li><a href={% url 'loginsignup:chat' %}>Chat</a></li>
                 <li><a href={% url 'loginsignup:logout' %}>Logout</a></li>
                 <li><a href=""></a></li>
               </ul>
